@@ -14,22 +14,22 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'de.thetaphi:forbiddenapis:3.2'
+		classpath 'de.thetaphi:forbiddenapis:3.5.1'
 	}
 }
 
 import de.thetaphi.forbiddenapis.gradle.CheckForbiddenApis
 import org.apache.tools.ant.filters.ReplaceTokens
 
-apply from: rootProject.file( 'gradle/module.gradle' )
-apply from: rootProject.file( 'gradle/libraries.gradle' )
-apply from: rootProject.file( 'gradle/databases.gradle' )
-
-apply plugin: 'org.hibernate.orm.database-service'
-
 apply plugin: 'java-library'
+
+apply from: rootProject.file( 'gradle/module.gradle' )
+apply from: rootProject.file( 'gradle/databases.gradle' )
+apply from: rootProject.file( 'gradle/javadoc.gradle' )
+
 apply plugin: 'biz.aQute.bnd.builder'
 apply plugin: 'org.hibernate.orm.database-service'
+apply plugin: 'org.hibernate.orm.build.java-module'
 
 apply plugin: 'org.checkerframework'
 
@@ -59,6 +59,15 @@ if ( !project.description ) {
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Configurations and Dependencies
 
+configurations.configureEach {
+	resolutionStrategy.eachDependency { details ->
+		//Force the "byte buddy agent" version to match the Byte Buddy version
+		// we use, as Mockito might pull in a mismatched version transitively
+		if (details.requested.group == "net.bytebuddy" && details.requested.name == 'byte-buddy-agent') {
+			details.useVersion libs.versions.byteBuddy.get()
+		}
+	}
+}
 
 dependencies {
 	implementation libs.logging
@@ -86,14 +95,12 @@ dependencies {
 	//Databases
 	testRuntimeOnly dbLibs.h2
 	testRuntimeOnly dbLibs.derby
+	testRuntimeOnly dbLibs.derbyTools
 	testRuntimeOnly dbLibs.hsqldb
 	testRuntimeOnly dbLibs.postgresql
 	testRuntimeOnly dbLibs.mssql
 	testRuntimeOnly dbLibs.informix
 	testRuntimeOnly dbLibs.cockroachdb
-	testRuntimeOnly dbLibs.oracle
-	testRuntimeOnly dbLibs.oracleXml
-	testRuntimeOnly dbLibs.oracleXmlParser
 	testRuntimeOnly dbLibs.sybase
 	testRuntimeOnly rootProject.fileTree(dir: 'drivers', include: '*.jar')
 
@@ -114,6 +121,14 @@ dependencies {
 	}
 	else if ( db.startsWith( 'firebird' ) ) {
 		testRuntimeOnly dbLibs.firebird
+	}
+	else if ( db.startsWith( 'oracle' ) ) {
+		testRuntimeOnly dbLibs.oracle
+		testRuntimeOnly dbLibs.oracleXml
+		testRuntimeOnly dbLibs.oracleXmlParser
+	}
+	else if ( db.startsWith( 'altibase' ) ) {
+		testRuntimeOnly dbLibs.altibase
 	}
 
 	annotationProcessor libs.loggingProcessor
@@ -153,62 +168,13 @@ artifacts {
 tasks.withType( JavaCompile ) {
 	options.encoding = 'UTF-8'
 	options.warnings false
+	options.fork = true
+	options.forkOptions.memoryMaximumSize = '768m'
+
 //	javaCompileTask.options.compilerArgs += [
 //			"-nowarn",
 //			"-encoding", "UTF-8"
 //	]
-}
-
-if ( !gradle.ext.javaToolchainEnabled ) {
-	tasks.compileJava.configure {
-		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
-		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
-	}
-	tasks.compileTestJava.configure {
-		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
-		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
-	}
-}
-else {
-	// Configure generated bytecode
-	// "sourceCompatibility" is not supported with toolchains. We have to work around that limitation.
-	tasks.compileJava.configure {
-		options.release = gradle.ext.javaVersions.main.release.asInt()
-		// Needs add-opens because of https://github.com/gradle/gradle/issues/15538
-		options.forkOptions.jvmArgs.addAll( ["--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"] )
-	}
-	tasks.compileTestJava.configure {
-		options.release = gradle.ext.javaVersions.test.release.asInt()
-		// Needs add-opens because of https://github.com/gradle/gradle/issues/15538
-		options.forkOptions.jvmArgs.addAll( ["--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"] )
-	}
-
-	// Configure version of Java tools
-	java {
-		toolchain {
-			languageVersion = gradle.ext.javaVersions.main.compiler
-		}
-	}
-	tasks.compileTestJava {
-		javaCompiler = javaToolchains.compilerFor {
-			languageVersion = gradle.ext.javaVersions.test.compiler
-		}
-	}
-
-	// Configure JVM Options
-	// Display version of Java tools
-	tasks.withType( JavaCompile ).configureEach {
-		options.forkOptions.jvmArgs.addAll( getProperty( 'toolchain.compiler.jvmargs' ).toString().split( ' ' ) )
-		doFirst {
-			logger.lifecycle "Compiling with '${javaCompiler.get().metadata.installationPath}'"
-		}
-	}
-	tasks.withType( Javadoc ).configureEach {
-		options.setJFlags( getProperty( 'toolchain.javadoc.jvmargs' ).toString().split( ' ' ).toList().findAll( { !it.isEmpty() } ) )
-		doFirst {
-			logger.lifecycle "Generating javadoc with '${javadocTool.get().metadata.installationPath}'"
-		}
-	}
 }
 
 
@@ -230,26 +196,6 @@ if ( toolsJar.exists() ) {
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Testing
-
-if ( gradle.ext.javaToolchainEnabled ) {
-	tasks.test {
-		// Configure version of Java tools
-		javaLauncher = javaToolchains.launcherFor {
-			languageVersion = gradle.ext.javaVersions.test.launcher
-		}
-
-		// Configure JVM Options
-		jvmArgs( getProperty( 'toolchain.launcher.jvmargs' ).toString().split( ' ' ) )
-		if ( project.hasProperty( 'test.jdk.launcher.args' ) ) {
-			jvmArgs( project.getProperty( 'test.jdk.launcher.args' ).toString().split( ' ' ) )
-		}
-
-		// Display version of Java tools
-		doFirst {
-			logger.lifecycle "Testing with '${javaLauncher.get().metadata.installationPath}'"
-		}
-	}
-}
 class HeapDumpPathProvider implements CommandLineArgumentProvider {
 	@OutputDirectory
 	Provider<Directory> path
@@ -300,13 +246,6 @@ tasks.withType( Test.class ).each { test ->
 sourceSets {
 	test {
 		resources {
-			// add `src/test/java` as a test-resources dir
-			configure( srcDir('src/test/java') ) {
-				filter {
-					include '**/*.properties'
-					include '**/*.xml'
-				}
-			}
 			configure( srcDir('src/test/resources') ) {
 				filter {
 					include '*.properties'
@@ -324,6 +263,7 @@ processTestResources {
 	duplicatesStrategy DuplicatesStrategy.INCLUDE
 	inputs.property( "db", db )
 	inputs.property( "dbHost", dbHost )
+	inputs.file( rootProject.file( "gradle/databases.gradle" ) )
 	doLast {
 		copy {
 			from( sourceSets.test.java.srcDirs ) {
@@ -355,15 +295,15 @@ test {
 	jvmArgs '-XX:+StartAttachListener'
 }
 
-// Enable the experimental features of ByteBuddy with JDK 19+
+// Enable the experimental features of ByteBuddy with JDK 22+
 test {
 	// We need to test the *launcher* version,
 	// because some tests will use Mockito (and thus Bytebuddy) to mock/spy
 	// classes that are part of the JDK,
 	// and those classes always have bytecode matching the version of the launcher.
-	// So for example, when using a JDK19 launcher and compiling tests with --release 17,
-	// Bytebuddy will still encounter classes with Java 19 bytecode.
-	if ( gradle.ext.javaVersions.test.launcher.asInt() >= 19 ) {
+	// So for example, when using a JDK22 launcher and compiling tests with --release 21,
+	// Bytebuddy will still encounter classes with Java 22 bytecode.
+	if ( jdkVersions.test.launcher.asInt() >= 22 ) {
 		logger.warn( "The version of Java bytecode that will be tested is not supported by Bytebuddy by default. " +
 				 " Setting 'net.bytebuddy.experimental=true'." )
 		systemProperty 'net.bytebuddy.experimental', true
@@ -456,7 +396,12 @@ task sourcesJar(type: Jar) {
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Javadoc
 
-apply from: rootProject.file( 'gradle/javadoc.gradle' )
+tasks.named( "javadoc", Javadoc ) {
+	configure( options ) {
+		windowTitle = "Hibernate Javadocs ($project.name)"
+		docTitle = "Hibernate Javadocs ($project.name : $project.version)"
+	}
+}
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // IDE
@@ -545,7 +490,7 @@ checkerFramework {
 	extraJavacArgs = [
             '-AsuppressWarnings=initialization',
             // stubs is passed directly through options.compilerArgumentProviders
-            '-AonlyDefs=^org\\.hibernate\\.(jdbc|exception|integrator|jpamodelgen|service|spi|pretty|property\\.access|stat|engine\\.(config|jndi|profile|transaction)|(action|context|bytecode)\\.spi)\\.'
+            '-AonlyDefs=^org\\.hibernate\\.(jdbc|exception|integrator|jpamodelgen|service|spi|pretty|property\\.access|stat|engine\\.(config|jndi|profile|spi|transaction)|(action|context|bytecode)\\.spi)\\.'
 	]
 }
 
@@ -556,7 +501,7 @@ task forbiddenApisSystemOut(type: CheckForbiddenApis, dependsOn: compileJava) {
 }
 
 task forbiddenApisUnsafe(type: CheckForbiddenApis, dependsOn: compileJava) {
-	bundledSignatures += "jdk-unsafe-${gradle.ext.baselineJavaVersion}".toString()
+	bundledSignatures += "jdk-unsafe-${jdkVersions.baseline}".toString()
 
 	// unfortunately we currently have many uses of default Locale implicitly (~370) which need to be fixed
 	// before we can fully enabled this check
@@ -567,6 +512,7 @@ task forbiddenApisUnsafe(type: CheckForbiddenApis, dependsOn: compileJava) {
 
 task forbiddenApisNonPortable(type: CheckForbiddenApis, dependsOn: compileJava) {
 	bundledSignatures += 'jdk-non-portable'
+	suppressAnnotations += ['org.hibernate.internal.build.AllowNonPortable']
 }
 
 task forbiddenApis {
